--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "express": "^4.13.3",
+    "express-handlebars": "^2.0.0",
     "serve-favicon": "^2.3.0",
     "morgan": "^1.6.1",
     "cookie-parser": "^1.3.3",
@@ -22,17 +23,12 @@
     "jade": "^1.11.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "debug": "^2.2.0",
-    "grunt": "^1.0.1",
-    "grunt-develop": "^0.4.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "request": "^2.60.0",
-    "time-grunt": "^1.2.1",
-    "load-grunt-tasks": "^3.2.0",
-    "mocha": "^3.0.2",
-    "nyc": "^10.0.0",
-    "supertest": "^2.0.0"
+    "gulp": "^3.9.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-tsb": "^1.9.0",
+    "gulp-tslint": "^6.1.1",
+    "tslint": "^3.15.1",
+    "typescript": "^1.7.3"
   },
   "engines": {
     "node": "6.9.1"
